Fix .container overflow on mobile
Remove `inline-size: 100%` from .container to fix an issue where the
container would overflow it's parent on smaller screens.

--- a/www/themes/morph/src/styles/layouts/container.scss
+++ b/www/themes/morph/src/styles/layouts/container.scss
@@ -1,6 +1,5 @@
 .container {
 	box-sizing: content-box;
-	inline-size: 100%;
 	max-inline-size: var(--container-width, 82.5rem);
 	padding-inline: var(--container-gap, 1rem);
 	margin-inline: auto;
